# fuji

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .style.yapf  AUTHORS  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  metrics_configuration.md  notes.md  pyproject.toml  requirements.txt  setup.py  start-dev.sh  test-requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  codespell.yml  publish-docker.yml  python-publish.yml  reports.yml
coverage/: class_index.html  d_c68eae20cc05bb5d_any_of_fair_results_items_py.html  d_c68eae20cc05bb5d_any_of_fair_results_results_items_py.html  d_c68eae20cc05bb5d_base_model__py.html  d_c68eae20cc05bb5d_body_py.html  d_c68eae20cc05bb5d_community_endorsed_standard_output_inner_py.html  d_c68eae20cc05bb5d_community_endorsed_standard_output_py.html  d_c68eae20cc05bb5d_community_endorsed_standard_py.html  d_c68eae20cc05bb5d_core_metadata_output_py.html  d_c68eae20cc05bb5d_core_metadata_py.html  d_c68eae20cc05bb5d_data_access_level_py.html  d_c68eae20cc05bb5d_data_access_output_py.html  d_c68eae20cc05bb5d_data_content_metadata_output_inner_py.html  d_c68eae20cc05bb5d_data_content_metadata_output_py.html  d_c68eae20cc05bb5d_data_content_metadata_py.html  d_c68eae20cc05bb5d_data_file_format_output_inner_py.html  d_c68eae20cc05bb5d_data_file_format_output_py.html  d_c68eae20cc05bb5d_data_file_format_py.html  d_c68eae20cc05bb5d_data_provenance_output_inner_py.html  d_c68eae20cc05bb5d_data_provenance_output_py.html  d_c68eae20cc05bb5d_data_provenance_py.html  d_c68eae20cc05bb5d_debug_py.html  d_c68eae20cc05bb5d_fair_result_common_py.html  d_c68eae20cc05bb5d_fair_result_common_score_py.html  d_c68eae20cc05bb5d_fair_result_evaluation_criterium_py.html  d_c68eae20cc05bb5d_fair_result_evaluation_criterium_requirements_py.html  d_c68eae20cc05bb5d_fair_results_py.html  d_c68eae20cc05bb5d_formal_metadata_output_inner_py.html  d_c68eae20cc05bb5d_formal_metadata_output_py.html  d_c68eae20cc05bb5d_formal_metadata_py.html  d_c68eae20cc05bb5d_harvest_results_metadata_py.html  d_c68eae20cc05bb5d_harvest_results_py.html  d_c68eae20cc05bb5d_identifier_included_output_inner_py.html  d_c68eae20cc05bb5d_identifier_included_output_py.html  d_c68eae20cc05bb5d_identifier_included_py.html  d_c68eae20cc05bb5d_license_output_inner_py.html  d_c68eae20cc05bb5d_license_output_py.html  d_c68eae20cc05bb5d_license_py.html  d_c68eae20cc05bb5d_metadata_preserved_output_py.html  d_c68eae20cc05bb5d_metadata_preserved_py.html  (+230 more)
doc/: FUJI_Flow.vsdx
docs/: README.md  license_header.txt
docs/source/: conf.py  index.rst
examples/mass_assessment/: Create_FAIR_assessment_report.ipynb  analysis.ipynb  analysis_cessda.csv  analysis_fair_ease.csv  cessda_repos.txt  fair_ease_repos.txt  fuji_mass_eval_template.py
fuji_server/: __init__.py  __main__.py  app.py  encoder.py  util.py
fuji_server/app/: fuji_app.py
fuji_server/client/: ex_evaluate.py  fuji_test.py
fuji_server/config/: github.cfg  github.ini  logging.ini  repository.ini  server.ini  users.py
fuji_server/controllers/: __init__.py  authorization_controller.py  fair_check.py  fair_metric_controller.py  fair_object_controller.py  fair_test.py  fair_test_bk.py  harvest_controller.py  mapping.py  message_filter.py  preprocessor.py  request_helper.py
fuji_server/data/: README.md  ResourceTypes.txt  access_rights.json  access_rights.yaml  bioschemastypes.txt  creativeworktypes.txt  default_namespaces.txt  doi_prefixes.tsv  file_formats.json  file_formats.yaml  identifiers_org_resolver_data.json  identifiers_org_resolver_data.yaml  jsonldcontext.json  jsonldcontext.yaml  licenses.json  licenses.yaml  linked_vocab.json  linked_vocab.yaml  longterm_formats.json  longterm_formats.yaml  metadata_standards.json  metadata_standards.yaml  metadata_standards_uris.json  metadata_standards_uris.yaml  open_formats.json  open_formats.yaml  repodois.json  repodois.yaml  science_formats.json  software_file.json  software_file.yaml  standard_uri_protocols.json  standard_uri_protocols.yaml
fuji_server/evaluators/: data_cache.py  fair_evaluator.py  fair_evaluator_api.py  fair_evaluator_check_license.py  fair_evaluator_code_provenance.py  fair_evaluator_community_metadata.py  fair_evaluator_content_included.py  fair_evaluator_data_access_level.py  fair_evaluator_data_content_metadata.py  fair_evaluator_data_identifier_included.py  fair_evaluator_data_provenance.py  fair_evaluator_development_metadata.py  fair_evaluator_file_format.py  fair_evaluator_formal_metadata.py  fair_evaluator_license.py  fair_evaluator_license_file.py  fair_evaluator_metadata_identifier_included.py  fair_evaluator_metadata_preservation.py  fair_evaluator_minimal_metadata.py  fair_evaluator_persistent_identifier.py  fair_evaluator_persistent_identifier_data.py  fair_evaluator_persistent_identifier_metadata.py  fair_evaluator_persistent_identifier_metadata_data.py  fair_evaluator_related_resources.py  fair_evaluator_requirements.py  fair_evaluator_retrievable_metadata_data.py  fair_evaluator_searchable.py  fair_evaluator_semantic_vocabulary.py  fair_evaluator_software_component_identifier.py  fair_evaluator_standardised_protocol.py  fair_evaluator_standardised_protocol_auth_metadata_data.py  fair_evaluator_standardised_protocol_data.py  fair_evaluator_standardised_protocol_metadata.py  fair_evaluator_standardised_protocol_metadata_data.py  fair_evaluator_test_cases.py  fair_evaluator_unique_identifier.py  fair_evaluator_unique_identifier_data.py  fair_evaluator_unique_identifier_metadata.py  fair_evaluator_unique_persistent_identifier_software.py  fair_evaluator_version_identifier.py
fuji_server/harvester/: data_harvester.py  github_harvester.py  (+2 more)
notebooks/: Test PANGAEA Datasets.ipynb  Test WDCC-CERA Datasets.ipynb
simpleclient/: index.php
tests/: codecov.yml  conftest.py  print_install.py  run_all.sh  run_all_cov.sh  run_all_covhtml.sh  test_api.py
utils/: validate_version_consistency.py
(+203 files in other folders)
